* completed shutter characteristics * make openhab template processor more generic using java reflection   * add all group addresses with their field name to the template mapping